--- a/app/views/compras/new.html.erb
+++ b/app/views/compras/new.html.erb
@@ -28,7 +28,7 @@
   </div>
   <% end %>
 </div>
-<div class="btn-group-vertical">
+<div class="btn-group-justified">
 
 <%= link_to 'Volver', compras_path, class: 'btn btn-default'  %>
 
