--- a/app/views/stocks/show.html.erb
+++ b/app/views/stocks/show.html.erb
@@ -25,7 +25,7 @@
   <%= @stock.factura_compra %>
 </p>
 
-<div class="btn-group-vertical">
+<div class="btn-group-justified">
 <!-- 
 <%= link_to 'Editar', edit_stock_path(@stock), class: 'btn btn-default' %> 
  -->
