--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -37,11 +37,13 @@
          </div>
        <% end %>
        </br>
-        <div class="btn-group">
-         <%= f.submit "Guardar Usuario", class: 'btn btn-info' %>
-        </div>
-        <div class="btn-group">
-          <%= link_to 'Cancelar', usuarios_path, class: 'btn btn-info '  %>
+       <div class="btn-group-justified">
+          <div class="btn-group">
+           <%= f.submit "Guardar Usuario", class: 'btn btn-info' %>
+          </div>
+          <div class="btn-group">
+            <%= link_to 'Cancelar', usuarios_path, class: 'btn btn-info '  %>
+          </div>
         </div>
       </div>
     
