--- a/app/views/calificacions/show.html.erb
+++ b/app/views/calificacions/show.html.erb
@@ -11,8 +11,18 @@
 </p>
 
 
-<div class="btn-group-vertical">
-<%= link_to 'Editar', edit_calificacion_path(@calificacion), class: 'btn btn-default' %> 
-<%= link_to 'Volver', calificacions_path, class: 'btn btn-info' %>
+<div class="btn-group-justified">
+<%= link_to '', edit_calificacion_path(@calificacion), class: 'btn btn-default btn-sm glyphicon glyphicon-pencil', :title => "Editar" %>
+    <%= link_to '',
+                @calificacion,
+                method: :delete,
+                class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
+                data: { confirm: 'Esta seguro de eliminar esta calificación?' }, :title => "Eliminar" %>
 
+
+</div>
+</br>
+</br>
+<div class="btn-group-justified">
+	<%= link_to 'Volver', calificacions_path, class: 'btn btn-info' %>
 </div>
