--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,5 +22,5 @@
     <%= f.submit "Actualizar", class: 'btn btn-default btn-lg btn-block' %>
   </div>
   </br>
-  <%= link_to "Cancelar", root_path, class: 'btn btn-default btn-lg' %>
+  <%= link_to "Cancelar", root_path, class: 'btn btn-default btn-lg btn-block' %>
 <% end %>
