--- a/app/views/empresas/edit.html.erb
+++ b/app/views/empresas/edit.html.erb
@@ -9,6 +9,6 @@
   </div>
 </div>
 </br>
-<div>
+<div class="btn-group-justified">
 <%= link_to 'Volver', empresas_path, class: 'btn btn-info btn-sm' %>
 </div>
