--- a/app/views/empresas/show.html.erb
+++ b/app/views/empresas/show.html.erb
@@ -26,7 +26,19 @@
   <strong>Correo electronico:</strong>
   <%= @empresa.email %>
 </p>
-<div class="btn-group-vertical">
-<%= link_to 'Editar', edit_empresa_path(@empresa), class: 'btn btn-default' %> 
-<%= link_to 'Volver', empresas_path, class: 'btn btn-info' %>
+<div class="btn-group-justified">
+<%= link_to '', edit_empresa_path(@empresa), class: 'btn btn-default btn-sm glyphicon glyphicon-pencil', :title => "Editar" %>
+    
+    
+    <%= link_to '',
+                @empresa,
+                method: :delete,
+                class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
+                data: { confirm: 'Esta seguro de eliminar esta empresa?' }, :title => "Eliminar" %>
+
+</div>
+</br>
+</br>
+<div class="btn-group-justified">
+  <%= link_to 'Volver', empresas_path, class: 'btn btn-info' %>
 </div>
