--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -10,6 +10,6 @@
 	</div>
 </div>
 </br>
-<div>
+<div class="btn-group-justified">
 <%= link_to 'Volver', menus_path, class: 'btn btn-info btn-sm' %>
 </div>
