--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -23,7 +23,19 @@
 	<%end%>
 <%end%>
 
-<div class="btn-group-vertical">
-<%= link_to 'Editar', edit_menu_path(@menu) , class: 'btn btn-default' %>
-<%= link_to 'Volver', menus_path , class: 'btn btn-info' %>
+<div class="btn-group-justified">
+<%if Time.now.to_date <= @menu.fecha.to_date %>
+    
+    <%= link_to '', edit_menu_path(@menu), class: 'btn btn-default btn-sm glyphicon glyphicon-pencil', :title => "Editar" %>
+    <%= link_to '',
+                @menu,
+                method: :delete,
+                class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
+                data: { confirm: 'Esta seguro de eliminar este producto?' }, :title => "Eliminar" %>
+    <%end%>
+</div>
+</br>
+</br>
+<div class="btn-group-justified">
+  <%= link_to 'Volver', menus_path , class: 'btn btn-info' %>
 </div>
