--- a/app/views/tipos/show.html.erb
+++ b/app/views/tipos/show.html.erb
@@ -9,7 +9,18 @@
   <%= @tipo.descripcion %>
 </p>
 </br>
-<div class="btn-group-vertical">
-<%= link_to 'Editar', edit_tipo_path(@tipo), class: 'btn btn-default' %> 
-<%= link_to 'Volver', tipos_path, class: 'btn btn-info' %>
+<div class="btn-group-justified">
+<%= link_to '', edit_tipo_path(@tipo), class: 'btn btn-default btn-sm glyphicon glyphicon-pencil', :title => "Editar" %>
+
+<%= link_to '',
+                @tipo,
+                method: :delete,
+                class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
+                data: { confirm: 'Esta seguro de eliminar este tipo?' }, :title => "Eliminar" %>
+
+</div>
+</br>
+</br>
+<div class="btn-group-justified">
+	<%= link_to 'Volver', tipos_path, class: 'btn btn-info' %>
 </div>
