--- a/app/views/usuarios/edit.html.erb
+++ b/app/views/usuarios/edit.html.erb
@@ -9,4 +9,6 @@
     <%= render 'form', usuario: @usuario %>
   </div>
 </div>
-</br>
+<div class="btn-group-justified">
+<%= link_to 'Volver', usuarios_path, class: 'btn btn-info btn-sm' %>
+</div>
