--- a/app/views/bebidas/show.html.erb
+++ b/app/views/bebidas/show.html.erb
@@ -34,7 +34,11 @@
                 class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
                 data: { confirm: 'Esta seguro de eliminar esta bebida?' }, :title => "Eliminar" %>
 
-  <%= link_to 'Abastecer stock', stocks_path, class: 'btn btn-default' %>
+</div>
+</br>
+<div class="btn-group-justified">                
+
+  <%= link_to 'Abastecer stock', stocks_path, class: 'btn btn-default ' %>
 </div>
 
 </br>
