--- a/app/views/calificacions/new.html.erb
+++ b/app/views/calificacions/new.html.erb
@@ -1,6 +1,10 @@
 
 
 <div class="section-container--header row">
+<% if flash[:error] %>
+    <div class="alert alert-danger"><%= flash[:error] %></div>
+  <% end %>
+</br>
   <div class="col-md-10 col-xs-8">
     <h2>Nueva Calificación</h2>
   </div>
