tipo de pedido en compras

--- a/app/views/compras/_compra.html.erb
+++ b/app/views/compras/_compra.html.erb
@@ -1,7 +1,7 @@
 <tr>
   <td><%= compra.id if compra%></td>
   <td><%= compra.fecha if compra%></td>
-  
+  <td><%= compra.tipo_pedido if compra%></td>
   <td>
   <div>
   <div class="btn-group ">
