--- a/app/views/compras/index.html.erb
+++ b/app/views/compras/index.html.erb
@@ -30,7 +30,8 @@
             <thead>
               <tr>
                 <th>Pedido id</th>  
-                <th>Fecha</th>              
+                <th>Fecha</th>     
+                <th>Tipo de pedido</th>         
                 <th colspan="3"></th>
               </tr>
                 <% if flash[:error] %>
