--- a/app/views/compras/_form.html.erb
+++ b/app/views/compras/_form.html.erb
@@ -28,17 +28,19 @@
     
     
     <% if @bebidas.present? %>
-    <p><label>BEBIDAS </label></p>
-    <% @bebidas.each do |bebida| %>
-        <% if bebida.mi_stock > 0 %>     
-          <div class="field">
-            <%= check_box_tag "bebidas[]", bebida.id   %> <%= bebida.nombre %> - <%= bebida.tipo %> - <%= bebida.tamanio %>
-          </div>
-          <br>
-          <% end %>
-    <%end%>
+      <p><label>BEBIDAS </label></p>
+      <% @bebidas.each do |bebida| %>
+          <% if bebida.mi_stock > 0 %>     
+            <div class="field">
+              <%= check_box_tag "bebidas[]", bebida.id   %> <%= bebida.nombre %> - <%= bebida.tipo %> - <%= bebida.tamanio %>
+            </div>
+            <br>
+            <% end %>
+      <%end%>
     <%end%>
 
+    <p> <label> Donde lo va a consumir? </label></p>
+      <%= select_tag 'tipo_pedido', options_for_select(["Seleccione tipo de pedido", "COMEDOR" , "DELIVERY" ]), {:class => 'form-control'}%>
   </div>
 
   
