ver pedido pendiente con tipo de pedido

--- a/app/views/compras/edit.html.erb
+++ b/app/views/compras/edit.html.erb
@@ -11,6 +11,11 @@
   <%= @compra.fecha %>
 
 </p>
+<p>
+  <strong>Tipo de pedido:</strong>
+  <%= @compra.tipo_pedido %>
+
+</p>
 Valor total del consumo: <strong>$<%= @compra.valor_final_ticket %></strong>
 <p>
   
