--- a/app/assets/stylesheets/gns.scss
+++ b/app/assets/stylesheets/gns.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the gns controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.prueboHabilitar{
+  data-disable-with=¨Procesando¨;
+}
