--- a/app/views/gns/index.html.erb
+++ b/app/views/gns/index.html.erb
@@ -25,7 +25,7 @@
       <div class="btn-group btn-group-justified">
         
         <div class="btn-group">
-        <%= f.submit "Generar archivo", class: 'btn btn-info ' %>
+        <%= f.button "Generar archivo", class: 'btn btn-info prueboHabilitar ' %>
         </div>
         <div class="btn-group">
         <%= link_to 'Volver', { :controller => :bi, :action => :index }, class: 'btn btn-info '  %>
