--- a/app/views/gns/index.html.erb
+++ b/app/views/gns/index.html.erb
@@ -26,8 +26,8 @@
         
         <div class="btn-group">
 
-          <%= f.button "Generar archivo", class: 'btn btn-info ' %>
-          <%= link_to 'Nuevo reporte', { :controller => :gns, :action => :index }, class: 'btn btn-default '  %>
+          <%= f.button "Generar archivo", class: 'btn btn-default ' %>
+          
           <%= link_to 'Volver', { :controller => :bi, :action => :index }, class: 'btn btn-info '  %>
         
         </div>
