--- a/app/views/bebidas/show.html.erb
+++ b/app/views/bebidas/show.html.erb
@@ -32,7 +32,7 @@
                 @bebida,
                 method: :delete,
                 class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
-                data: { confirm: 'Esta seguro de eliminar esta bebida?' }, :title => "Eliminar" %>
+                data: { confirm: 'Está seguro de eliminar esta bebida?' }, :title => "Eliminar" %>
 
 </div>
 </br>
