--- a/app/views/bi/consumos_por_mes.html.erb
+++ b/app/views/bi/consumos_por_mes.html.erb
@@ -1,4 +1,4 @@
-<h1> Grafica: Evolucion de consumos por mes </h1>
+<h1> Gráfica: Evolución de consumos por mes </h1>
 
 <table>
 <tr><td><div> <br></div> 	</td></tr>
