--- a/app/views/compras/_form.html.erb
+++ b/app/views/compras/_form.html.erb
@@ -39,7 +39,7 @@
       <%end%>
     <%end%>
 
-    <p> <label> Donde lo va a consumir? </label></p>
+    <p> <label> Dónde lo va a consumir? </label></p>
       <%= select_tag 'tipo_pedido', options_for_select(["Seleccione tipo de pedido", "COMEDOR" , "DELIVERY" ]), {:class => 'form-control'}%>
   </div>
 
