--- a/app/views/empresas/show.html.erb
+++ b/app/views/empresas/show.html.erb
@@ -9,21 +9,21 @@
 </p>
 
 <p>
-  <strong>Razon Social:</strong>
+  <strong>Razón Social:</strong>
   <%= @empresa.razon_social %>
 </p>
 
 <p>
-  <strong>Telefono:</strong>
+  <strong>Teléfono:</strong>
   <%= @empresa.telefono %>
 </p>
 
 <p>
-  <strong>Direccion:</strong>
+  <strong>Dirección:</strong>
   <%= @empresa.direccion %>
 </p>
 <p>
-  <strong>Correo electronico:</strong>
+  <strong>Correo electrónico:</strong>
   <%= @empresa.email %>
 </p>
 <div class="btn-group-justified">
@@ -34,7 +34,7 @@
                 @empresa,
                 method: :delete,
                 class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
-                data: { confirm: 'Esta seguro de eliminar esta empresa?' }, :title => "Eliminar" %>
+                data: { confirm: 'Está seguro de eliminar esta empresa?' }, :title => "Eliminar" %>
 
 </div>
 </br>
