--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -31,7 +31,7 @@
                 @menu,
                 method: :delete,
                 class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
-                data: { confirm: 'Esta seguro de eliminar este menu?' }, :title => "Eliminar" %>
+                data: { confirm: 'Está seguro de eliminar este menú?' }, :title => "Eliminar" %>
     <%end%>
 </div>
 </br>
