--- a/app/views/tipos/show.html.erb
+++ b/app/views/tipos/show.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-  <strong>Descripcion: </strong>
+  <strong>Descripción: </strong>
   <%= @tipo.descripcion %>
 </p>
 </br>
@@ -16,7 +16,7 @@
                 @tipo,
                 method: :delete,
                 class: 'btn btn-warning btn-sm glyphicon glyphicon-remove',
-                data: { confirm: 'Esta seguro de eliminar este tipo?' }, :title => "Eliminar" %>
+                data: { confirm: 'Está seguro de eliminar este tipo?' }, :title => "Eliminar" %>
 
 </div>
 </br>
