--- a/app/views/bi/index.html.erb
+++ b/app/views/bi/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Modulo de Business Intelligence</h2>
+<h2>Módulo de Business Intelligence</h2>
 
 
  
@@ -9,15 +9,15 @@
     <div >
     <li class><%= link_to 'Exportar consumos a GNS', { :controller => :gns, :action => :index }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-   <li class><%= link_to 'Grafica: Total de compras por dia', { :controller => :bi, :action => :compras_por_dia }, class: 'btn btn-default btn-lg btn-block' %></li>
+   <li class><%= link_to 'Gráfica: Total de compras por día', { :controller => :bi, :action => :compras_por_dia }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-    <li class><%= link_to 'Grafica: Historico de Productos mas consumidos', { :controller => :bi, :action => :productos_mas_consumidos }, class: 'btn btn-default btn-lg btn-block' %></li>
+    <li class><%= link_to 'Gráfica: Histórico de Productos más consumidos', { :controller => :bi, :action => :productos_mas_consumidos }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-    <li class><%= link_to 'Grafica: Evolucion de consumos por mes', { :controller => :bi, :action => :consumos_por_mes }, class: 'btn btn-default btn-lg btn-block' %></li>
+    <li class><%= link_to 'Gráfica: Evolución de consumos por mes', { :controller => :bi, :action => :consumos_por_mes }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-    <li class><%= link_to 'Grafica: Recaudación por día', { :controller => :bi, :action => :recaudo_por_dia }, class: 'btn btn-default btn-lg btn-block' %></li>
+    <li class><%= link_to 'Gráfica: Recaudación por día', { :controller => :bi, :action => :recaudo_por_dia }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
-    <li class><%= link_to 'Grafica: Historico de Bebidas mas consumidas', { :controller => :bi, :action => :bebidas_mas_consumidas }, class: 'btn btn-default btn-lg btn-block' %></li>
+    <li class><%= link_to 'Gráfica: Histórico de Bebidas más consumidas', { :controller => :bi, :action => :bebidas_mas_consumidas }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
     </div>
 
