--- a/app/views/calificacions/index.html.erb
+++ b/app/views/calificacions/index.html.erb
@@ -2,7 +2,7 @@
 <br>
 <div class="col-md-12">
   <div class="btn-group btn-group-justified">
-    <%= link_to 'Nueva Calificacion', new_calificacion_path, class: 'btn btn-default'  %>
+    <%= link_to 'Nueva Calificación', new_calificacion_path, class: 'btn btn-default'  %>
   
     <%= link_to 'Volver', root_path, class: 'btn btn-default' %>
 
