--- a/app/views/compras/new.html.erb
+++ b/app/views/compras/new.html.erb
@@ -5,14 +5,14 @@
 <div class="section-container--header row">
 </div>
   <% if @div_msg_menu %>
-      <h2> <p>Todavia no tenemos el Menu disponible para el dia de hoy!</p>
+      <h2> <p>Todavía no tenemos el Menú disponible para el día de hoy!</p>
       <p> Por favor intentalo mas tarde.</p>
        </h2>
 
   <% end %>
   <% if @div_msg_franja %>
       <h2> <p>No se reunen las condiciones para realizar una compra! </p>
-      <p> Por favor, comuniquese con el administrador. (error: franjas)</p>
+      <p> Por favor, comuníquese con el administrador. (error: franjas)</p>
       <p> Le pedimos disculpas por las molestias causadas.</p>
        </h2>
 
