--- a/app/views/menus/edit.html.erb
+++ b/app/views/menus/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="section-container--header row">
   <div class="col-md-10 col-xs-8">
-    <h2>Modificar Menu</h2>
+    <h2>Modificar Menú</h2>
   </div>
 </div>
 <div class="row">
