--- a/app/views/menus/index.html.erb
+++ b/app/views/menus/index.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Menus</h1>
+<h1>Menús</h1>
 <br>
 <div class="col-md-12">
   <div class="btn-group btn-group-justified">
-    <%= link_to 'Nuevo Menu', new_menu_path, class: 'btn btn-default'  %>
+    <%= link_to 'Nuevo Menú', new_menu_path, class: 'btn btn-default'  %>
   
     <%= link_to 'Volver', root_path, class: 'btn btn-default' %>
     
