--- a/app/views/menus/menudeldia.pdf.erb
+++ b/app/views/menus/menudeldia.pdf.erb
@@ -4,7 +4,7 @@
 		<title></title>
 		<%= wicked_pdf_stylesheet_link_tag 'pdf' %>
 	</head>
-<body><h1>Menu del dia</h1>
+<body><h1>Menú del día</h1>
 
 <p>
   <div class="pdf_fecha"><%= @menu.fecha %></div>
