--- a/app/views/tipos/index.html.erb
+++ b/app/views/tipos/index.html.erb
@@ -20,7 +20,7 @@
           <thead>
             <tr>
               <th>Nombre</th>
-              <th>Descripcion</th>
+              <th>Descripción</th>
               <th colspan="3"></th>
             </tr>
         </thead>
