--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
   <ul class="list-unstyled">
 <% if @div_admin || @div_opera %>
     <div >
-    <li class><%= link_to 'Informes estadisticos y reportes', { :controller => :bi, :action => :index }, class: 'btn btn-default btn-lg btn-block' %></li>
+    <li class><%= link_to 'Informes estadísticos y reportes', { :controller => :bi, :action => :index }, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
     <li class><%= link_to 'Tipos de Producto', tipos_path, class: 'btn btn-default btn-lg btn-block' %></li>
     </br>
@@ -25,7 +25,7 @@
     </br>
     <li><%= link_to 'Empresas', empresas_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>
-    <li><%= link_to 'Menus', menus_path, class: 'btn btn-default btn-lg btn-block'  %></li>
+    <li><%= link_to 'Menús', menus_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>
     <li><%= link_to 'Usuarios', usuarios_path, class: 'btn btn-default btn-lg btn-block'  %></li>
     </br>  
