--- a/app/views/menus/show.html.erb
+++ b/app/views/menus/show.html.erb
@@ -1,5 +1,8 @@
 <p id="notice"><%= notice %></p>
-
+<% if flash[:error] %>
+    <div class="alert alert-danger"><%= flash[:error] %></div>
+  <% end %>
+</br>
 <p>
   <strong>Fecha:</strong>
   <%= @menu.fecha %>
